test/validator/list_of_values_also.orderly
object {
        string name [ "jim", "joe", "bob" ];
        number  age  [ 1.2, 1.3, 1.5 ];
        integer laughing  [ 0, 1 ];
        
};
