test/negative_cases/bad_array.orderly
object {
  string bar;
  array { integer; } numbers = [ 1,2,3; 
  integer foo;  
} myobj;
